# FlexLibrary

./: CMakeLists.txt  README.md  main.c
books/: books.c
books/include/: books.h  books_defines.h
network/: client.c  server.c
network/include/: client.h  network_defines.h  server.h
ui/: ui.c
ui/include/: ui.h  ui_defines.h
utils/: utils.c
utils/include/: utils.h
